--- a/project/board/static/board/css/board_post/board_post_small.css
+++ b/project/board/static/board/css/board_post/board_post_small.css
@@ -177,6 +177,8 @@
     font-stretch: normal;
     line-height: 1.2;
     text-align: left;
+    font-family: YDIYGO320;
+
     color: #a6a7a7;
     height: 60px;
 
