--- a/project/board/templates/board/post_detail.html
+++ b/project/board/templates/board/post_detail.html
@@ -1,13 +1,56 @@
-{% extends 'base.html' %}
+{% extends 'login_base.html' %}
 
 {% load child_comments %}
 {% load static %}
 
 {% block css %}
   <link rel="stylesheet" href="{% static 'board/css/post_detail.css' %}">
+  <link rel="stylesheet" media="(max-width:768px)" href="{% static "board/css/board_post/board_post_mobile.css" %}" type="text/css">
+  <link rel="stylesheet" media="(max-width:768px)" href="{% static "board/css/board_header/board_header_mobile.css" %}" type="text/css">
 {% endblock %}
 
 {% block contents %}
+    <div class="base__header mobile__header">
+        <div class="base__header__used-space container">
+            <div class="header__wrap">
+                <div class="header__main">
+                    <div class="header__ham" id="h_click">
+                        <img src="{% static "/svg/햄버거.svg" %}" alt="">
+                    </div>
+                    <div class="header__logo">
+                    <a href="{% url 'core:board:main_board' univ.url_name %}">
+                        <img src="{% static "/svg/box logo.svg" %}">
+                        <img src="{{ univ.logo_mobile.url }}">
+                        </a>
+                    </div>
+                    <div class="board__header__right">
+                        <ul class="board__buttons">
+                            <li><img src="{% static "/svg/messege box.svg" %}"></li>
+                            <a href="{% url 'core:board:post_create' univ.url_name %}">
+                                <li><img id="h__post" src="{% static "/svg/post.svg" %}"></li>
+                            </a>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="header__dropdown mobile__header pd__drop"  id="h_h"  style="display: none;">
+        <div class="header__drop__mypage">
+            <img src="{% static "/svg/마이페이지.svg" %}" alt="">My Page</div>
+        <div class="header__drop__notification">
+            <img src="{% static "/svg/알림.svg" %}" alt="">Notification</div>
+        <div class="header__drop__search">
+            <form action="" method="get">
+                <button type="submit" value="search">
+                    <img src="{% static "/svg/검색.svg" %}">
+                </button>
+                <input type="text" placeholder="Search" name="search" value="{{ search }}">
+            </form>
+        </div>
+    </div>
+
+
   <div class="container">
     <div class="detail__wrapper">
       <div class="detail__post__header">
@@ -397,5 +440,15 @@
       document.execCommand("copy");
       document.body.removeChild(tempElem);
     })
+
+      document.getElementById('h_click').onclick = () =>{
+        console.log("helllo");
+        var drop = document.getElementById("h_h");
+        if(drop.style.display == 'none'){
+            drop.style.display = 'flex';
+        } else {
+            drop.style.display = 'none';
+        }
+    };
   </script>
 {% endblock %}
