--- a/project/templates/login_base.html
+++ b/project/templates/login_base.html
@@ -20,7 +20,10 @@
 <body>
     <div class="base__header pc__header">
         <div class="base__header__used-space container">
-            <div class="base__logo"><object type="image/svg+xml" data="{% static "/svg/logo-uf.svg" %}"></object></div>
+            <div class="base__logo">
+            <a href="{% url 'core:board:main_board' univ.url_name %}">
+            <img src="{{ univ.logo.url }}">
+            </a></div>
                 
                 <div class="board__header__search pc__header">
                     <form action="" method="get">
