--- a/project/board/templates/board/post_detail.html
+++ b/project/board/templates/board/post_detail.html
@@ -18,7 +18,7 @@
                         <img src="{% static "/svg/햄버거.svg" %}" alt="">
                     </div>
                     <div class="header__logo">
-                    <a href="{% url 'core:board:main_board' univ.url_name %}">
+                    <a href="{% url 'core:board:main_board' url_name %}">
                         <img src="{% static "/svg/box logo.svg" %}">
                         <img src="{{ univ.logo_mobile.url }}">
                         </a>
