--- a/project/templates/login_base.html
+++ b/project/templates/login_base.html
@@ -21,7 +21,7 @@
     <div class="base__header pc__header">
         <div class="base__header__used-space container">
             <div class="base__logo">
-            <a href="{% url 'core:board:main_board' univ.url_name %}">
+            <a href="{% url 'core:board:main_board' url_name %}">
             <img src="{{ univ.logo.url }}">
             </a></div>
                 
