--- a/project/accounts/templates/registration/login.html
+++ b/project/accounts/templates/registration/login.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 {% block css %}
-    <link rel="stylesheet" href="{% static "registration/css/main.css" %}">
+    <link rel="stylesheet" media="(max-width:768px)" href="{% static "registration/css/login_mobile.css" %}" type="text/css">
+    <link rel="stylesheet" media="(min-width:768px)" href="{% static "registration/css/main.css" %}">
     <link rel="stylesheet" href="{% static "accounts/css/modal.css" %}">
 {% endblock %}
 
