--- a/project/core/static/base/css/base.css
+++ b/project/core/static/base/css/base.css
@@ -26,3 +26,8 @@ body {
     font-family: YDIYGO320;
     src: url("../../fonts/YDIYGO320.ttf") format('truetype');
 }
+
+@font-face {
+    font-family: LOTTEMART_BOLD;
+    src: url("../../fonts/LOTTEMART_BOLD.ttf") format('truetype');
+}
