--- a/project/accounts/static/accounts/css/signup_modal_mobile.css
+++ b/project/accounts/static/accounts/css/signup_modal_mobile.css
@@ -1,5 +1,6 @@
 /* modal display:flex*/
 
+
 .signup-modal {
     display:none;
     flex-direction: column;
@@ -16,7 +17,7 @@
 
 .modal-contents {
     border-radius: var(--border-radius);
-    width: 30rem;
+    width: 90%;
     background-color: #F8F7F6;
     padding: 0 2rem;
 }
@@ -29,9 +30,6 @@
     margin: 1.1rem 0;
 }
 
-.signup-form {
-
-}
 
 .signup-form .signup-form__input {
     display:flex;
@@ -40,19 +38,20 @@
 
 .signup-form__input input {
     margin: 0.1rem 0 0.4rem 0;
-    font-size: 2rem;
+    font-size: 1.5rem;
     height: 2.5rem;
     text-indent: 1rem;
+    border: 1pt solid #aeb0b3;
 }
 
 .signup-form__input input::placeholder {
     color: #A7ABAD;
-    font-size: 2rem;
+    font-size: 1rem;
     font-weight: 100;
 }
 
 .signup-form__input:first-child {
-    margin-bottom: 2rem;
+    margin-bottom: 1.4rem;
 }
 
 .signup-form__input button {
@@ -60,7 +59,7 @@
     color: white;
     border: none;
     margin: 0.1rem 0 2.5rem 0;
-    font-size: 2rem;
+    font-size: 1.2rem;
     height: 2.5rem;
     font-weight: 300;
 }
@@ -75,4 +74,8 @@
 .modal__exit-button span:hover {
     font-size: 2.0rem;
     cursor: pointer;
+}
+
+.signup__form-label {
+    color:#464749;
 }
