header 버튼 해당 링크로 연결 기타 수정

--- a/project/accounts/templates/accounts/mypage.html
+++ b/project/accounts/templates/accounts/mypage.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "login_base.html" %}
 {% load staticfiles %}
 {% block css %}
     <link rel="stylesheet" href="{% static 'components/white-wrapper.css' %}">
