--- a/project/board/static/board/css/board_post/board_post_mobile.css
+++ b/project/board/static/board/css/board_post/board_post_mobile.css
@@ -69,6 +69,11 @@
     font-size: 0.9rem;
 }
 
+.header__dropdown a{
+    color:#4fbcbd;
+    text-decoration: none;
+}
+
 .board__pannel__top a {
     text-decoration: none;
     width: auto;
