--- a/project/board/templates/board/post_new.html
+++ b/project/board/templates/board/post_new.html
@@ -36,8 +36,11 @@
         </div>
     </div>
     <div class="header__dropdown mobile__header pd__drop"  id="h_h"  style="display: none;">
+     <a href="{% url 'core:accounts:mypage' univ.url_name %}">
         <div class="header__drop__mypage">
-            <img src="{% static "/svg/마이페이지.svg" %}" alt="">My Page</div>
+            <img src="{% static "/svg/마이페이지.svg" %}" alt="">My Page
+        </div>
+        </a>
         <div class="header__drop__notification">
             <img src="{% static "/svg/알림.svg" %}" alt="">Notification</div>
         <div class="header__drop__search">
