--- a/project/templates/login_base.html
+++ b/project/templates/login_base.html
@@ -37,8 +37,12 @@
                 <div class="board__header__right pc__header">
                     <ul class="board__buttons">
                         <li><img src="{% static "/svg/alarm.svg" %}"></li>
-                        <li><img src="{% static "/svg/messege box.svg" %}"></li>
-                        <li><img src="{% static "/svg/mypage.svg" %}"></li>
+                        <a href="{% url 'core:chat:chat' univ.url_name %}">
+                            <li><img src="{% static "/svg/messege box.svg" %}"></li>
+                        </a>
+                        <a href="{% url 'core:accounts:mypage' univ.url_name %}">
+                            <li><img src="{% static "/svg/mypage.svg" %}"></li>
+                        </a>
                         <a href="{% url 'core:board:post_create' univ.url_name %}">
                             <li><img id="h__post" src="{% static "/svg/post.svg" %}"></li>
                         </a>
